Tangle-less version

--- a/proto.html
+++ b/proto.html
@@ -11,10 +11,10 @@
         <form action="">
             <div class="breakdown">
                 <label for="padding-top">padding:</label>
-                <input type="text" id="padding-top"    class="ECLinkedValue" data-var="top" />
-                <input type="text" id="padding-right"  class="ECLinkedValue" data-var="right top"  data-previous="top" />
-                <input type="text" id="padding-bottom" class="ECLinkedValue" data-var="bottom top" data-previous="right" />
-                <input type="text" id="padding-left"   class="ECLinkedValue" data-var="left right top" data-previous="bottom" />
+                <input type="text" id="padding-top"    data-prop="top" />
+                <input type="text" id="padding-right"  data-prop="right" />
+                <input type="text" id="padding-bottom" data-prop="bottom" />
+                <input type="text" id="padding-left"   data-prop="left" />
             </div>
         </form>
         <div class="box-model"><span>Content</span></div>
