Show linking lines for fallback values

--- a/proto.html
+++ b/proto.html
@@ -18,14 +18,17 @@
                 <span class="property-input prop-right">
                     <label for="padding-right">right</label>
                     <input type="text" id="padding-right"  data-prop="right" />
+                    <span class="link" data-prop="right"></span>
                 </span>
                 <span class="property-input prop-bottom">
                     <label for="padding-bottom">bottom</label>
                     <input type="text" id="padding-bottom" data-prop="bottom" />
+                    <span class="link link-wide" data-prop="bottom"></span>
                 </span>
                 <span class="property-input prop-left">
                     <label for="padding-left">left</label>
                     <input type="text" id="padding-left"   data-prop="left" />
+                    <span class="link link-wide" data-prop="left"></span>
                 </span>
             </div>
         </form>
