Added some display guides

--- a/proto.html
+++ b/proto.html
@@ -32,7 +32,13 @@
                 </span>
             </div>
         </form>
-        <div class="box-model"><span>Content</span></div>
+        <div class="box-model">
+            <span class="content">Content</span>
+            <span class="guide" data-prop="top"></span>
+            <span class="guide" data-prop="right"></span>
+            <span class="guide" data-prop="bottom"></span>
+            <span class="guide" data-prop="left"></span>
+        </div>
     </section>
 
     <script src="proto.js"></script>
