Switched to Sass so I can lazily use colour functions

--- a/proto.html
+++ b/proto.html
@@ -33,7 +33,7 @@
             </div>
         </form>
         <div class="box-model">
-            <span class="content">Content</span>
+            <span class="content">This is an example box to show how padding values are applied.</span>
             <span class="guide" data-prop="top"></span>
             <span class="guide" data-prop="right"></span>
             <span class="guide" data-prop="bottom"></span>
