View/edit raw value as a whole

--- a/proto.html
+++ b/proto.html
@@ -31,6 +31,10 @@
                     <span class="link link-wide" data-prop="left"></span>
                 </span>
             </div>
+            <div class="raw-value">
+                <label for="raw-value">padding:</label>
+                <input type="text" id="raw-value" />
+            </div>
         </form>
         <div class="box-model">
             <span class="content">This is an example box to show how padding values are applied.</span>
