New idea: Animate values to wrap around a box

--- a/proto.html
+++ b/proto.html
@@ -43,6 +43,24 @@
             <span class="guide" data-prop="bottom"></span>
             <span class="guide" data-prop="left"></span>
         </div>
+
+        <div class="wraparound">
+            <span class="prop">padding:</span>
+            <span class="values">
+                <span class="value" data-prop="top">1px</span>
+                <span class="value" data-prop-list="rbl">
+                    <span class="value" data-prop="right">2px</span>
+                    <span class="value" data-prop-list="bl">
+                        <span class="value" data-prop="bottom">3px</span>
+                        <span class="value" data-prop-list="l">
+                            <span class="value" data-prop="left">4px</span>
+                        </span>
+                    </span>
+                </span>
+            </span>
+            <span class="content">Content</span>
+            <button class="toggle">Toggle</button>
+        </div>
     </section>
 
     <script src="proto.js"></script>
